[tool.poetry]
name = "mykaggle"
version = "0.1.0"
description = ""
authors = ["cfiken <cfiken@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.10.14"
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"
kaggle = "^1.5.13"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
mypy = "*"
autopep8 = "*"

[tool.mypy]
ignore_missing_imports = true
exclude = '^jupyter_notebook_config\.py$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
